Pridany atribut "isAnodised" pre prvky. A tiez typ dat "checkboxValue".

--- a/web/app/css/app.css
+++ b/web/app/css/app.css
@@ -77,6 +77,10 @@ body {
     color: #aaa;
     background-color: white; }
 
+.checkboxValue {
+    text-align: left;
+    width: auto;
+}
 
 #inProgressWaiting {
     position: absolute;
